--- a/resume/index.html
+++ b/resume/index.html
@@ -150,19 +150,10 @@ body{font-size:16px;}
       <blockquote>
         <ul>
           <li><strong>姓名：苏辉</strong></li>
-          <li><strong>地址：中国地质大学（武汉）</strong></li>
-          <li><strong>手机：18062436647</strong></li>
+          <li><strong>地址：中国科学院（并行实验室）</strong></li>
+          <li><strong>手机：15321968859</strong></li>
           <li><strong>常用邮箱：professorshui@gmail.com || 769681067@qq.com</strong></li>
           <li><strong>个人主页：<a href="http://suhui.github.io">suhui</a></strong></li>
-        </ul>
-        </blockquote>
-          <h4 id="_2">教育背景</h4>
-          <hr />
-        <blockquote>
-        <ul>
-          <li><strong>时间：2011.9-至今</strong></li>
-          <li><strong>学校：中国地质大学</strong></li>
-          <li><strong>专业：软件工程</strong></li>
         </ul>
         </blockquote>
           <h4 id="_3">获奖证书</h4>
