--- a/resume/index.html
+++ b/resume/index.html
@@ -155,22 +155,44 @@ body{font-size:16px;}
           <li><strong>常用邮箱：professorshui@gmail.com || 769681067@qq.com</strong></li>
         </ul>
         </blockquote>
+       <h4 id="_2">教育背景</h4>
+        <hr />
+      <blockquote>
+        <ul>
+          <li>本科：2011.9-2015.7 / 中国地质大学 / 软件工程</li>
+          <li>硕士：2015.9-现在 / 中国科学院软件研究所</li>
+        </ul>
+        </blockquote>
           <h4 id="_4">技能</h4>
           <hr />
         <blockquote>
           <ul>
-          <li><strong>C/C++：熟悉</strong>(MFC，nodejs模块,主研究CUDA并行计算)</li>
+          <li><strong>Python：熟练</strong>(Tensorflow)</li>
+          <li><strong>PHP：熟练</strong></li>
+          <li><strong>C/C++：熟悉</strong>(MFC，nodejs模块,CUDA)</li>
           <li><strong>Java：熟悉</strong>structs2，Android)</li>
           <li><strong>Nodejs：熟练</strong>(nodecuda，connect,express,mocha)</li>
-          <li><strong>SQL数据库：了解</strong>(MySQL,Oracle，SQlserver)</li>
-          <li><strong>Linux:熟悉</strong>(UBuntu,fedora)</li>
           </ul>
         </blockquote>
           <h4 id="_5">项目经验</h4>
           <hr />
         <blockquote>
           <ul>
-          <li><strong>NodeCuda项目 --- </a></strong>[2014.1~2014.5]<ul>
+          <li><strong>中科院p2p下载软件friendsbt --- </strong>[2015.11~2016.3]<ul>
+          <li>提高IPV6下载速度至40M/s</li>
+          <li>增加IPV4模块（在v4下也可下载)</li>
+          </ul>
+          <ul>
+          <li><strong>Word2vec的GPU并行化 --- </strong>[2015.1~2015.4]<ul>
+          <li>对比cpu版本速度提高20倍</li>
+          <li>作为毕业设计获湖北省优秀毕业论文</li>
+          </ul>
+          <ul>
+          <li><strong>百度LBS数据平台开发 --- </strong>[2014.9~2015.1]<ul>
+          <li>baidu实习期间参与开发的数据平台</li>
+          </ul>
+          <ul>
+          <li><strong>NodeCuda项目 --- </strong>[2014.1~2014.5]<ul>
           <li>结合nodejs与cuda针对GPU与web结合的实践</li>
           <li>优化同节点多GPU的通信</li>
           <li>实现多节点之间的数据传输与任务调度</li>
@@ -181,12 +203,12 @@ body{font-size:16px;}
           <li>构建信息展示的平台</li>
           </ul>
           </li>
-          <li><strong>基于ssh框架的中国地质大学志愿者银行 --- </a></strong>[2014.4-至今]<ul>
+          <li><strong>基于ssh框架的中国地质大学志愿者银行 --- </a></strong>[2014.4-2014.6]<ul>
           <li>负责交易后台业务逻辑与编码</li>
-          <li>负责论坛实现</li>
+          <li>论坛实现</li>
           </ul>
           </li>
-          <li><strong>lol全服英雄数据库与全服召唤师信息查询网站 --- </strong>[2014.5-至今]<ul>
+          <li><strong>英雄联盟全服英雄数据库查询网站 --- </strong>[2014.5]<ul>
           <li>实现国服+外服统一的接口</li>
           </ul>
           </li>
@@ -196,7 +218,6 @@ body{font-size:16px;}
         <hr />
         <blockquote>
           <ul>
-          <li><strong>喜欢使用MarkDown，Ubuntu，和Sublime</strong></li>
           <li><strong>英语：CET6(497),CET4(553)</strong></li>
           <li><strong>兴趣爱好:篮球，二次元</strong></li>
           <li><strong>我的个人网页：<a href="http://suhui.github.io">http://suhui.github.io</a></strong></li>
