--- a/resume/index.html
+++ b/resume/index.html
@@ -159,8 +159,8 @@ body{font-size:16px;}
         <hr />
       <blockquote>
         <ul>
-          <li>本科：2011.9-2015.7 / 中国地质大学 / 软件工程</li>
-          <li>硕士：2015.9-现在 / 中国科学院软件研究所</li>
+          <li><strong>本科：</strong>2011.9-2015.7 / 中国地质大学 / 软件工程</li>
+          <li><strong>硕士：</strong>2015.9-现在 / 中国科学院软件研究所</li>
         </ul>
         </blockquote>
           <h4 id="_4">技能</h4>
